[package]
name = "cf_security"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
hex = "0.4"

# AST Analysis
rustpython-parser = "0.4"

# HTTP & Auth
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# Async runtime (required by azure.rs)
tokio = { version = "1.42", features = ["time"] }

[dev-dependencies]
tokio = { version = "1.42", features = ["macros", "rt-multi-thread"] }
