[package]
name = "casparian-deck"
version = "0.1.0"
description = "Casparian Flow Desktop Application"
authors = ["Casparian Flow Team"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "casparian_deck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

# Casparian Crates
casparian = { path = "../../crates/casparian" }
casparian_sentinel = { path = "../../crates/casparian_sentinel" }
casparian_worker = { path = "../../crates/casparian_worker" }
cf_protocol = { path = "../../crates/cf_protocol" }
cf_security = { path = "../../crates/cf_security" }

# Async Runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

# Platform directories
dirs = "6.0"

# Crypto
sha2 = "0.10"

# Database (for topology queries)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
chrono = { version = "0.4", features = ["serde"] }

# DuckDB for parquet queries
duckdb = { version = "1.1", features = ["bundled"] }

[dev-dependencies]
tempfile = "3.14"
