[package]
name = "evtx_native"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
arrow = "54"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
evtx = { version = "0.11.0", default-features = false, features = ["multithreading"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace]
